--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
       <section class="content">
         <div class="left">
           <h2>Monthly Subscription</h2>
-          <p class="first"><span class="price">&dollar;29</span> per month</p>
+          <p class="first"><span class="price">&dollar;29</span>
+            <span class="second">per month</span>
+          </p>
+          
+          </p>
           <p>Full access for less than &dollar;1 a day </p>
           <button>Sign Up</button>
         </div>
