--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a target="_blank" href="https://github.com/sreehariv-code">Sreehari P V</a>.
     </p>
   </footer>
 </body>
